# better-map

./: .gitignore  AGENTS.md  LICENSE  README.md  nixpacks.toml  railway.json
.specify/: extensions.yml  feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: README.md  main.py  pyproject.toml
backend/src/better_map/: __init__.py
backend/src/better_map/api/: __init__.py  app.py  wspr.py
backend/src/better_map/models/: __init__.py  callsign.py  errors.py  wspr.py
backend/src/better_map/services/: __init__.py  wspr_live.py
backend/tests/contract/: test_health.py  test_version_api.py  test_wspr_activity_api.py
backend/tests/unit/: test_callsign_query.py  test_errors.py  test_wspr_activity.py  test_wspr_live_provider.py
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  version.ts  vite.config.test.ts  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/test/: setup.ts  (+1 more)
scripts/: start-backend.sh  start-frontend.sh
specs/001-wspr-map-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-deckgl-map-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-next-feature-adding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-terminator-overlay/: spec.md
(+106 files in other folders)
